2010-03-15  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): Add
	python_clean_sitedirs()

2010-03-10  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode-arch-stable-list): Initialise from
	profiles.desc, bug 304133.

2010-03-02  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):
	python_mod_exists(), python_tkinter_exists() are deprecated

2010-02-21  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-mysql):
	Add xtradb_applicable() and pbxt_applicable()

2010-02-16  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-java-ant-2):
	Add java-pkg_get-bootclasspath()

2010-02-14  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el: Partially undo change of 2009-08-21.
	(ebuild-mode-arch-stable-list): Reintroduce variable.
	(ebuild-mode-modify-keywords, ebuild-mode-ekeyword-complete)
	(ebuild-mode-insert-skeleton): Use it.
	(ebuild-mode-arch-list, ebuild-mode-use-flags): Don't test if
	files are readable, because we ignore errors anyway.
	(ebuild-mode-arch-list, ebuild-mode-licenses)
	(ebuild-mode-eclasses, ebuild-mode-use-flags): Handle only file
	errors in condition-case.
	(ebuild-mode-arch-lessp): New function, predicate for sort.
	(ebuild-mode-arch-list): Sort list of architectures.
	(ebuild-mode-sort-keywords): Function removed.
	(ebuild-mode-modify-keywords): Pass ebuild-mode-arch-lessp as
	predicate function for sort.

2010-02-11  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): Add
	python_get_implementation() and python_get_implementational_package()

2010-02-02  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-python):
	Add python_get_library(), python_get_version(),
	python_execute_nosetest(), python_execute_py.test(),
	python_execute_trial()
