@@ -575,6 +575,12 @@
      "generate_sparc_asm" "headers___fix")
     font-lock-type-face))
 
+(defvar ebuild-mode-keywords-xorg-2
+  '(("xorg-2_patch_source" "xorg-2_reconf_source" "xorg-2_font_configure"
+     "xorg-2_flags_setup" "cleanup_fonts" "setup_fonts" "remove_font_metadata"
+     "create_fonts_scale" "create_fonts_dir")
+  font-lock-type-face))
+
 (defvar ebuild-mode-keywords-versionator
   '(("get_all_version_components" "get_version_components" "get_major_version"
      "get_version_component_range" "get_after_major_version"
